<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="@dimen/common_topbar_height"
              android:layout_alignParentBottom="true"
              android:layout_marginBottom="0dp"
              android:orientation="horizontal">

    <Button
        android:id="@+id/btn_refulse"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/examination_refulse"/>

    <Button
        android:id="@+id/btn_commit"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/examination_commit"/>

    <Button
        android:id="@+id/btn_transfer"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/examination_transfer"/>
</LinearLayout>