<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/common_bg_examination"
              android:orientation="vertical"
              android:weightSum="1">

    <include
        android:id="@+id/topbar"
        layout="@layout/topbar_common_itt"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/et_container"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/et_white_stroke"
            android:gravity="top|left"
            android:hint="@string/hint_examination_refulse"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:textSize="@dimen/common_textSize_default12"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_topbar_height"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_commit_all"
                android:layout_width="0dp"
                android:layout_height="@dimen/common_topbar_height"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/approve_sure_all"
                android:textColor="@color/exa_agree"
                android:textSize="@dimen/common_textSize_default15"/>

            <Button
                android:id="@+id/btn_commit"
                android:layout_width="0dp"
                android:layout_height="@dimen/common_topbar_height"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_weight="1"
                android:background="@color/exa_agree"
                android:gravity="center"
                android:text="@string/approve_sure"
                android:textColor="@color/white"
                android:textSize="@dimen/common_textSize_default15"/>


        </LinearLayout>


    </RelativeLayout>

</LinearLayout>